udpate global font family conf

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -67,7 +67,8 @@
         "success":"Success",
         "confirmClose":"Are you sure to close edit page?",
         "clockOutMessage":"Great job today, it's time to chill!",
-        "unknowError":"UnknowError"
+        "unknowError":"UnknowError",
+        "notification":"Notification"
     },
 
 
