--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -77,7 +77,9 @@
 
 
     "router":{
-        "reLogin":"Please re-login."
+        "reLogin":"Please re-login.",
+        "home":"Home",
+        "client":"Client_Management"
     },
     "axios":{
         "reLogin":"Session expired, please log in again."
