--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -77,7 +77,9 @@
 
 
     "router":{
-        "reLogin":"請重新登入"
+        "reLogin":"請重新登入",
+        "home":"首頁",
+        "client":"用戶管理"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
