add new client icon

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -97,7 +97,8 @@
         "edit":"Edit",
         "applyNewUser":"Apply New User",
         "cancel":"Cancel",
-        "submit":"Submit"
+        "submit":"Submit",
+        "new":"New"
     },
 
 
