--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -97,7 +97,8 @@
         "edit":"編輯",
         "applyNewUser":"申請新用戶",
         "cancel":"取消",
-        "submit":"提交"
+        "submit":"提交",
+        "new":"新用戶"
     },
 
 
