--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -81,7 +81,7 @@
         "col-attendStatus":"打卡狀態",
         "col-active":"帳戶狀態",
         "col-lock":"帳戶鎖定",
-        "col-edit":"編輯",
+        "col-config":"設置",
         "active":{
             "true":"啟用中",
             "false":"停用中"
@@ -94,13 +94,10 @@
         "totalQuantifier":"條",
         "pageQuantifier":"/頁",
         "search":"搜尋",
-        "edit":"編輯",
         "applyNewUser":"申請新用戶",
         "cancel":"取消",
         "submit":"提交",
-        "new":"新用戶",
-        "editUser":"編輯用戶",
-        "confirmClose":"確定要關閉尚未儲存視窗嗎?"
+        "new":"新用戶"
     },
 
 
