update client locked kick out

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -110,5 +110,8 @@
     },
     "axios":{
         "reLogin":"Session expired, please log in again."
+    },
+    "message":{
+        "kickOut":"Account has been disabled. You have been logged out."
     }
 }
