update empty department desc

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -99,6 +99,9 @@
         "submit":"Submit",
         "new":"New"
     },
+    "departmentBody":{
+        "clientEmpty":"No team members"
+    },
 
 
 
