--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -66,7 +66,7 @@
         "logoutSuccess":"登出成功",
         "success":"操作成功",
         "confirmClose":"確定要關閉尚未儲存視窗嗎?",
-        "clockOutMessage":"ヽ(✿ﾟ▽ﾟ)ノ下班下班~~~",
+        "clockOutMessage":"下班下班~~~",
         "unknowError":"發生未知錯誤, 請聯繫管理員",
         "notification":"通知",
         "errorConnecting":"連線失敗，請重新整理頁面"
