departmentBody client search add all role btn

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -110,7 +110,8 @@
         "col-id":"ID",
         "col-username":"Name",
         "col-roles":"Roles",
-        "col-config":"Config"
+        "col-config":"Config",
+        "all":"All"
     },
 
 
