update overFlow auto and add calc total

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -111,7 +111,8 @@
         "col-username":"Name",
         "col-roles":"Roles",
         "col-config":"Config",
-        "all":"All"
+        "all":"All",
+        "total":"Total"
     },
 
 
