--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -111,7 +111,8 @@
         "col-username":"名稱",
         "col-roles":"角色",
         "col-config":"設置",
-        "all":"全部"
+        "all":"全部",
+        "total":"總數"
     },
 
 
