add Department tabs

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -127,7 +127,9 @@
         "rolesConfig":"Department Roles",
         "errorDefaultRole": "Default role error, department does not have this role.",
         "nowRole":"Current Roles",
-        "noRole":"Not Joined Yet"
+        "noRole":"Not Joined Yet",
+        "addDepartment":"Add Department",
+        "add":"Add"
     },
 
 
