update rolePermission display structure

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -139,7 +139,8 @@
         "roleName":"Role Name",
         "save":"Save",
         "reset":"Reset",
-        "selectPermission":"Select Role Permissions"
+        "selectPermission":"Select Role Permissions",
+        "selectRole":"No role selected"
     },
 
 
