--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -99,8 +99,7 @@
         "submit":"提交",
         "new":"新用戶",
         "save":"保存",
-        "updateSuccess":"保存成功",
-        "updateFailed":"保存失敗，請聯繫管理員"
+        "updateSuccess":"保存成功"
     },
     "departmentBody":{
         "clientEmpty":"沒有組員",
