--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -176,7 +176,8 @@
         "client":"用戶清單",
         "department":"部門管理",
         "rolePermission":"角色權限管理",
-        "permissionList":"權限清單"
+        "permissionList":"權限清單",
+        "roleMenu":"菜單管理"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
