update salaryList page

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -194,7 +194,10 @@
         "col-total":"Total",
         "year":"Year {0}",
         "month":"Month {0}",
-        "dataEmpty":"Data Empty"
+        "dataEmpty":"Data Empty",
+        "salaryDetail":"Salary Detail",
+        "username":"Name",
+        "createTime":"Create Time"
     },
 
 
