--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -194,7 +194,10 @@
         "col-total":"總額",
         "year":"{0} 年",
         "month":"{0} 月",
-        "dataEmpty":"查無資料"
+        "dataEmpty":"查無資料",
+        "salaryDetail":"薪資明細",
+        "username":"名稱",
+        "createTime":"創建時間"
     },
 
 
